[package]
name = "verbalcode"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "verbalcode"

[dependencies]
async-trait = "0.1"
futures = "0.3"
form_urlencoded = "1.0"
wasmbus-rpc = "0.11"
wasmcloud-interface-httpserver = "0.8"
wasmcloud-interface-keyvalue = "0.9"
serde_qs = "0.10"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
regex = "1.7"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
