[package]
name = "verbalcode"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "verbalcode"

[dependencies]
indoc = "1.0"
tokio = { version = "1.23", features = ["macros", "rt", "time", "test-util"] }
async-trait = "0.1"
futures = "0.3"
wasmbus-rpc = "0.11"
wasmcloud-interface-httpserver = "0.8"
wasmcloud-interface-keyvalue = "0.9"
wasmcloud-interface-logging = "0.8"
serde_urlencoded = "0.7"
serde = { version = "1.0", features = ["derive"] }
regex = "1.7"
tinytemplate = "1.2"

[dev-dependencies]
serde_json = "1.0"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
